--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,6 +2,19 @@
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
 
+  "item.tutorialmod.sapphire_staff": "Sapphire Staff",
+
+  "item.tutorialmod.sapphire_sword": "Sapphire Sword",
+  "item.tutorialmod.sapphire_pickaxe": "Sapphire Pickaxe",
+  "item.tutorialmod.sapphire_axe": "Sapphire Axe",
+  "item.tutorialmod.sapphire_shovel": "Sapphire Shovel",
+  "item.tutorialmod.sapphire_hoe": "Sapphire Hoe",
+
+  "item.tutorialmod.sapphire_helmet": "Sapphire Helmet",
+  "item.tutorialmod.sapphire_chestplate": "Sapphire Chestplate",
+  "item.tutorialmod.sapphire_leggings": "Sapphire Leggings",
+  "item.tutorialmod.sapphire_boots": "Sapphire Boots",
+
   "item.tutorialmod.metal_detector": "Metal Detector",
 
   "item.tutorialmod.strawberry": "Strawberry",
@@ -10,6 +23,19 @@
 
   "block.tutorialmod.sapphire_block": "Sapphire Block",
   "block.tutorialmod.raw_sapphire_block": "Raw Sapphire Block",
+
+  "block.tutorialmod.sapphire_stairs": "Sapphire Stairs",
+  "block.tutorialmod.sapphire_slab": "Sapphire Slab",
+
+  "block.tutorialmod.sapphire_button": "Sapphire Slab",
+  "block.tutorialmod.sapphire_pressure_plate": "Sapphire Slab",
+
+  "block.tutorialmod.sapphire_fence": "Sapphire Fence",
+  "block.tutorialmod.sapphire_fence_gate": "Sapphire Fence Gate",
+  "block.tutorialmod.sapphire_wall": "Sapphire Wall",
+
+  "block.tutorialmod.sapphire_door": "Sapphire Door",
+  "block.tutorialmod.sapphire_trap_door": "Sapphire Trap Door",
 
   "block.tutorialmod.sapphire_ore": "Sapphire Ore",
   "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
