--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -56,6 +56,8 @@
 
   "block.tutorialmod.catmint": "Catmint",
 
+  "block.tutorialmod.gem_polisher":  "Gem Polisher",
+
   "creativetab.tutorialmod_tab": "Tutorial Mod",
 
   "tooltip.tutorialmod.metal_detector.tooltip": "Detects metal, not ores"
